--- a/index.html
+++ b/index.html
@@ -21,12 +21,19 @@
             <p class="sub-title">select a range of numbers</p>
             <div class="line"></div>
             <div class="btn-wrapper">
-                <button class="range-btn" id="range-easy">0-100</button>
-                <button class="range-btn" id="range-intermediate">100-10k</button>
-                <button class="range-btn" id="range-hard">10k-50k</button>
-                <button class="range-btn" id="range-expert">50k-100k</button>
+                <button class="range-btn" data-value="0">0-100</button>
+                <button class="range-btn" data-value="100">100-10k</button>
+                <!-- <button class="range-btn" data-value="10000">10k-50k</button>
+                <button class="range-btn" data-value="50000">50k-100k</button> -->
+            </div>
+
+            <div class="recite-content">
+                <p class="recite-number">0</p>
+                <p>Count: <span class="count">0</span></p>
             </div>
         </main>
     </div>
+
+    <script src="./src/js/app.js"></script>
 </body>
 </html>
