--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
             <p class="sub-title">select a range of numbers</p>
             <div class="line"></div>
             <div class="btn-wrapper">
-                <button class="range-btn" data-value="0">0-100</button>
-                <button class="range-btn" data-value="100">100-10k</button>
-                <!-- <button class="range-btn" data-value="10000">10k-50k</button>
-                <button class="range-btn" data-value="50000">50k-100k</button> -->
+                <button class="range-btn" data-lower="0" data-upper="100">0-100</button>
+                <button class="range-btn" data-lower="100" data-upper="500">100-500</button>
+                <button class="range-btn" data-lower="500" data-upper="1000">500-1000</button>
+                <button class="range-btn" data-lower="1000" data-upper="5000">1000-5000</button>
             </div>
 
             <div class="recite-content">
                 <p class="recite-number">0</p>
-                <p>Count: <span class="count">0</span></p>
             </div>
         </main>
     </div>
