--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <link rel="icon" href="./src/assets/icon-package/1-solid.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="./src/assets/icon-package/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/icon-package/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/icon-package/favicon-16x16.png">
+    <link rel="manifest" href="./src/assets/icon-package/site.webmanifest">
+
+    <link rel="icon" href="./src/assets/icon-package/favicon.ico">
 
     <link rel="stylesheet" href="./src/styles/styles.css">
 </head>
