--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/icon-package/favicon-16x16.png">
     <link rel="manifest" href="./src/assets/icon-package/site.webmanifest">
 
-    <link rel="icon" href="./src/assets/icon-package/favicon.ico">
+    <link rel="shortcut icon" href="./src/assets/icon-package/favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="./src/styles/styles.css">
 </head>
