Add different scripts for corresponding number

--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
 
             <div class="recite-content">
                 <p class="recite-number">0</p>
+                <!-- <button class="show-romaji-btn">show solution</button> -->
+                <p class="script-type" id="romaji">-</p>
+                <p class="script-type" id="hiragana">-</p>
+                <p class="script-type" id="kanji">-</p>
             </div>
         </main>
     </div>
 
-    <script src="./src/js/app.js"></script>
+    <script src="./src/js/app.js" type="module"></script>
 </body>
 </html>
